--- a/Day 6.ipynb
+++ b/Day 6.ipynb
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 5: With a given list write a program to print this list L after removing all duplicate values with original order reserved. \n"
+    "# Q5: With a given list write a program to print this list L after removing all duplicate values with original order reserved. \n"
    ]
   },
   {
