--- a/Day 10.ipynb
+++ b/Day 10.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypotheis 6 Statement:-\n",
+    "# Hypothesis 6 Statement:-\n",
     "The average level of employees is 2 with standard deviation 2.A reasearcher believes that if level is less than 2 higher attrition has been observed.Taking a sample of 50employees with average level 3.\n",
     "\n"
    ]
